--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,31 @@
-<main>
-  <h1 class="title">Hello from Angular !</h1>
 
-  <!-- Images (and assets) are parsed and loaded from within the public directory -->
-  <img src="/img/logo.png">
-</main>
-<footer>
+<md-content class="md-padding" layout-xs="column" layout="row">
+
+  <!--
+  <md-card>
+    <img src="/img/logo.png" class="md-card-image">
+  </md-card>
+  -->
+
+  <md-card>
+    <md-card-title>
+      <md-card-title-text>
+        <span class="md-headline">Hello from Angular!</span>
+        <span class="md-subhead">Card subheader</span>
+      </md-card-title-text>
+    </md-card-title>
+    <md-card-content>
+      <a href="#/">Home</a>
+      <a href="#/view1">View 1</a>
+
+      <!-- instead of ng-view, lets try out component routing -->
+      <ng-view></ng-view>
+
+    </md-card-content>
+  </md-card>
+
+</md-content>
+
+<md-content class="md-padding" layout="row">
   <a ng-href="{{app.url}}">Webpack Angular Starter</a>
-</footer>
+</md-content>
