--- a/src/app/component/view1.html
+++ b/src/app/component/view1.html
@@ -1,4 +1,23 @@
-<p>View 1 Component</p>
-<p>
-    <ng-md-icon icon="amazon" size="48"></ng-md-icon>
-</p>
+<md-content class="md-padding" layout-xs="column" layout="row">
+
+    <md-card>
+        <md-card-title>
+            <md-card-title-text>
+                <span class="md-headline">Angular Material with Webpack</span>
+                <span class="md-subhead">Card subheader</span>
+            </md-card-title-text>
+        </md-card-title>
+        <md-card-content>
+            <p>View 1 Component</p>
+            <p>
+                <ng-md-icon icon="amazon" size="36"></ng-md-icon>
+            </p>
+            <a ng-href="{{view1Ctrl.url}}">Alpha Saver</a>
+        </md-card-content>
+    </md-card>
+
+</md-content>
+
+
+
+
