--- a/src/style/app.css
+++ b/src/style/app.css
@@ -2,9 +2,9 @@
 
 /* TODO: Need to do this with variables and sass */
 body {
-    background: #ddd;
+    background: #ECEFF1;
 }
 
 body md-content {
-    background: #ddd;
+    background: #ECEFF1;
 }
