Using input/output bindings as recommended for components.

--- a/src/app/component/view1.html
+++ b/src/app/component/view1.html
@@ -12,7 +12,7 @@
             <p>
                 <ng-md-icon icon="amazon" size="36"></ng-md-icon>
             </p>
-            <a ng-href="{{view1Ctrl.url}}">Alpha Saver</a>
+            <a ng-href="{{view1Ctrl.url}}">Super Duper</a>
         </md-card-content>
     </md-card>
 
