Sticky toolbars. Switch to service for sidenav... no need for bindings.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,6 +5,9 @@
 
   <!-- main content -->
   <tabbar></tabbar>
-  <ng-view></ng-view>
+
+  <md-content class="md-padding" layout="column">
+    <ng-view></ng-view>
+  </md-content>
 
 </div>
